BUDGET/force-app/main/default/objects/Investment__c/Investment__c.object-meta.xml
<CustomObject>
    <label>Investment Holding</label>
    <nameField>
        <displayFormat>INV-{00000}</displayFormat>
        <label>Investment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investment Holdings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>