BUDGET/force-app/main/default/objects/Investment__c/fields/BUY_SELL__c.field-meta.xml
<CustomField>
    <fullName>BUY_SELL__c</fullName>
    <label>BUY/SELL</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BUY</fullName>
                <default>true</default>
                <label>BUY</label>
            </value>
            <value>
                <fullName>SELL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>