BUDGET/force-app/main/default/objects/Investment__c/fields/Current_Share_Price__c.field-meta.xml
<CustomField>
    <fullName>Current_Share_Price__c</fullName>
    <label>Current Share Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>