BUDGET/force-app/main/default/objects/Investment__c/fields/InitialVal__c.field-meta.xml
<CustomField>
    <fullName>InitialVal__c</fullName>
    <defaultValue>0</defaultValue>
    <label>InitialVal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>