BUDGET/force-app/main/default/objects/Investment__c/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <label>Portfolio</label>
    <referenceTo>Portfolio__c</referenceTo>
    <relationshipName>Investments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>