BUDGET/force-app/main/default/objects/Investment__c/fields/Purchase_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Date_Time__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Date/Time</label>
    <type>DateTime</type>
</CustomField>