BUDGET/force-app/main/default/objects/Investment__c/fields/Purchase_Share_Price__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Share_Price__c</fullName>
    <label>Purchase Share Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>