BUDGET/force-app/main/default/objects/Investment__c/fields/Security__c.field-meta.xml
<CustomField>
    <fullName>Security__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Security</label>
    <referenceTo>Security__c</referenceTo>
    <relationshipLabel>Investment Holdings</relationshipLabel>
    <relationshipName>Investment_Holdings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>