BUDGET/force-app/main/default/objects/Investment__c/fields/Sell_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Sell_Date_Time__c</fullName>
    <formula>IF( TEXT( BUY_SELL__c ) = &quot;SELL&quot; ,  DATETIMEVALUE(  LastModifiedDate  ) ,  CreatedDate  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sell Date/Time</label>
    <type>DateTime</type>
</CustomField>