BUDGET/force-app/main/default/objects/Investment__c/fields/Shares_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Shares_Remaining__c</fullName>
    <label>Shares Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>