BUDGET/force-app/main/default/objects/Investment__c/fields/Shares_To_Sell__c.field-meta.xml
<CustomField>
    <fullName>Shares_To_Sell__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Shares To Sell</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>