BUDGET/force-app/main/default/objects/Investment__c/fields/Symbol__c.field-meta.xml
<CustomField>
    <fullName>Symbol__c</fullName>
    <label>Symbol</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>