BUDGET/force-app/main/default/objects/Investment__c/fields/Total_Gain_Loss__c.field-meta.xml
<CustomField>
    <fullName>Total_Gain_Loss__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Gain/Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>