BUDGET/force-app/main/default/objects/Investment__c/fields/Total_Purchase_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Purchase_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Purchase Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>