BUDGET/force-app/main/default/objects/Investment__c/recordTypes/BUY.recordType-meta.xml
<RecordType>
    <fullName>BUY</fullName>
    <active>true</active>
    <label>BUY</label>
</RecordType>