BUDGET/force-app/main/default/objects/Investment__c/validationRules/greater_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>greater_than_0</fullName>
    <active>false</active>
    <errorConditionFormula>Shares_To_Sell__c &lt;= 0</errorConditionFormula>
    <errorMessage>you must sell greater than 0 shares</errorMessage>
</ValidationRule>