BUDGET/force-app/main/default/objects/Investment__c/validationRules/shares_remaining.validationRule-meta.xml
<ValidationRule>
    <fullName>shares_remaining</fullName>
    <active>true</active>
    <errorConditionFormula>Shares_Remaining__c &lt; 0</errorConditionFormula>
    <errorMessage>You don&apos;t have enough shares to execute this trade</errorMessage>
</ValidationRule>