BUDGET/force-app/main/default/objects/Investment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Symbol__c</columns>
    <columns>Portfolio__c</columns>
    <columns>Purchase_Date_Time__c</columns>
    <columns>Purchase_Share_Price__c</columns>
    <columns>Total_Purchase_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>